--- a/day02-02-fileupload/pom.xml
+++ b/day02-02-fileupload/pom.xml
@@ -72,6 +72,20 @@
       <version>1.3.3</version>
     </dependency>
 
+    <!--跨服务器上传依赖-->
+    <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-core -->
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-core</artifactId>
+      <version>1.19.4</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-client -->
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>1.19.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
